--- a/ecommerce-platform/src/main/resources/application.properties
+++ b/ecommerce-platform/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=ecommerce-platform
-spring.datasource.url=jdbc:postgresql://localhost:5432/contentdb
-spring.datasource.username=postgres
-spring.datasource.password=your_password
+spring.application.name=auth-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=springuser
+spring.datasource.password=SpringPass123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
