--- a/Auth-service/src/main/resources/application.properties
+++ b/Auth-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=springuser
 spring.datasource.password=SpringPass123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# Enable debug logging for Spring Security
+logging.level.org.springframework.security=DEBUG
