--- a/Auth-service/pom.xml
+++ b/Auth-service/pom.xml
@@ -124,12 +124,17 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
-
-			<!-- Single Spring Boot Maven plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.3.3</version> <!-- or your Spring Boot version -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
