--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -3,15 +3,14 @@ spring.application.name=cart-service
 server.port=8085
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/cart_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/cart_service
+spring.datasource.username=springuser
+spring.datasource.password=SpringPass123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Kafka
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.group-id=cart-group
