--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,18 +3,22 @@ spring.application.name=order-service
 server.port=8084
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/order_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/cart_service
+spring.datasource.username=springuser
+spring.datasource.password=SpringPass123
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Kafka
-spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.bootstrap-servers=kafka:9092
+
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
 spring.kafka.consumer.group-id=order-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.order_service.model
+
