--- a/Auth-service/src/main/resources/application.properties
+++ b/Auth-service/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=auth-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=springuser
-spring.datasource.password=SpringPass123
+spring.datasource.url=jdbc:postgresql://postgres:5432/authdb
+spring.datasource.username=micro_user
+spring.datasource.password=MicroPass123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # Enable debug logging for Spring Security
 logging.level.org.springframework.security=DEBUG
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.prefer-ip-address=true
