--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=order-service
 # Server
-server.port=8084
+server.port=8082
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/cart_service
-spring.datasource.username=springuser
-spring.datasource.password=SpringPass123
+spring.datasource.url=jdbc:postgresql://postgres:5432/orderdb
+spring.datasource.username=micro_user
+spring.datasource.password=MicroPass123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
