--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=product-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
-spring.datasource.username=springuser
-spring.datasource.password=SpringPass123
+server.port=8083
+spring.datasource.url=jdbc:postgresql://postgres:5432/productdb
+spring.datasource.username=micro_user
+spring.datasource.password=MicroPass123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8081
+server.address=0.0.0.0
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
