--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,15 +3,15 @@ server.port=8085
 
 # Gateway routes
 spring.cloud.gateway.routes[0].id=auth-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8080
+spring.cloud.gateway.routes[0].uri=http://auth-service:8080
 spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
 
 spring.cloud.gateway.routes[1].id=product-service
-spring.cloud.gateway.routes[1].uri=http://localhost:8081
+spring.cloud.gateway.routes[1].uri=http://product-service:8083
 spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
 
 spring.cloud.gateway.routes[2].id=order-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8082
+spring.cloud.gateway.routes[2].uri=http://order-service:8082
 spring.cloud.gateway.routes[2].predicates[0]=Path=/orders/**
 
 spring.cloud.gateway.default-filters[0]=StripPrefix=1
@@ -21,5 +21,18 @@ jwt.secret=bXlTdXBlclNlY3JldEtleVRoYXRJc0F0TGVhc3QzMkNoYXJzTG9uZyEh
 
 # optional: logging
 logging.level.org.springframework=INFO
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.com.example.api_gateway=DEBUG
+# Enable OpenAPI in API Gateway
+springdoc.api-docs.enabled=true
+
+# List of microservices OpenAPI docs to aggregate
+springdoc.gateway.locations[0]=http://auth-service:8080/v3/api-docs
+springdoc.gateway.locations[1]=http://product-service:8083/v3/api-docs
+
 
 
