--- a/Auth-service/src/main/resources/application.properties
+++ b/Auth-service/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.com.example.api_gateway=DEBUG
