--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ eureka.client.fetch-registry=false
 
 eureka.instance.hostname=localhost
 
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
