--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -11,3 +11,9 @@ server.address=0.0.0.0
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.com.example.api_gateway=DEBUG
