--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -12,7 +12,11 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
 
 spring.cloud.gateway.routes[2].id=order-service
 spring.cloud.gateway.routes[2].uri=http://order-service:8082
-spring.cloud.gateway.routes[2].predicates[0]=Path=/orders/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/order/**
+
+spring.cloud.gateway.routes[3].id=cart-service
+spring.cloud.gateway.routes[3].uri=http://cart-service:8081
+spring.cloud.gateway.routes[3].predicates[0]=Path=/cart/**
 
 spring.cloud.gateway.default-filters[0]=StripPrefix=1
 
@@ -33,6 +37,7 @@ springdoc.api-docs.enabled=true
 # List of microservices OpenAPI docs to aggregate
 springdoc.gateway.locations[0]=http://auth-service:8080/v3/api-docs
 springdoc.gateway.locations[1]=http://product-service:8083/v3/api-docs
+springdoc.gateway.locations[2]=http://order-service:8082/v3/api-docs
 
 
 
