--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -17,10 +17,25 @@ spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-spring.kafka.consumer.group-id=order-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.order_service.model
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+
+# Eureka client config
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.com.example.api_gateway=DEBUG
+
+spring.kafka.consumer.group-id=order-group
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
+# Allow deserializing objects from any package
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+# Map the cart service event class name to the order service event class
+spring.kafka.consumer.properties.spring.json.type.mapping=com.example.cart_service.event.CartCheckedOutEvent:com.example.order_service.event.CartCheckedOutEvent
