Adding service discovery releated changes

--- a/Auth-service/src/main/resources/application.properties
+++ b/Auth-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=auth-service
 spring.datasource.url=jdbc:postgresql://postgres:5432/authdb
 spring.datasource.username=micro_user
 spring.datasource.password=MicroPass123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 # Enable debug logging for Spring Security
 logging.level.org.springframework.security=DEBUG
