--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,22 +1,40 @@
 # Server port
 server.port=8085
 
-# Gateway routes
+spring.application.name=api-gateway
+
+# Enable Eureka Discovery
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# ------------------------------
+# Routes Configuration
+# ------------------------------
+
+# Auth Service
 spring.cloud.gateway.routes[0].id=auth-service
-spring.cloud.gateway.routes[0].uri=http://auth-service:8080
+spring.cloud.gateway.routes[0].uri=lb://AUTH-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
 
+# Product Service
 spring.cloud.gateway.routes[1].id=product-service
-spring.cloud.gateway.routes[1].uri=http://product-service:8083
+spring.cloud.gateway.routes[1].uri=lb://PRODUCT-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
 
+# Order Service
 spring.cloud.gateway.routes[2].id=order-service
-spring.cloud.gateway.routes[2].uri=http://order-service:8082
+spring.cloud.gateway.routes[2].uri=lb://ORDER-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/order/**
 
+# Cart Service
 spring.cloud.gateway.routes[3].id=cart-service
-spring.cloud.gateway.routes[3].uri=http://cart-service:8081
+spring.cloud.gateway.routes[3].uri=lb://CART-SERVICE
 spring.cloud.gateway.routes[3].predicates[0]=Path=/cart/**
+
+# List of microservices OpenAPI docs to aggregate
+springdoc.gateway.locations[0]=http://auth-service:8080/v3/api-docs
+springdoc.gateway.locations[1]=http://product-service:8083/v3/api-docs
+springdoc.gateway.locations[2]=http://order-service:8082/v3/api-docs
 
 spring.cloud.gateway.default-filters[0]=StripPrefix=1
 
@@ -34,10 +52,6 @@ logging.level.com.example.api_gateway=DEBUG
 # Enable OpenAPI in API Gateway
 springdoc.api-docs.enabled=true
 
-# List of microservices OpenAPI docs to aggregate
-springdoc.gateway.locations[0]=http://auth-service:8080/v3/api-docs
-springdoc.gateway.locations[1]=http://product-service:8083/v3/api-docs
-springdoc.gateway.locations[2]=http://order-service:8082/v3/api-docs
-
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
